hackatom/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starway-server
  namespace: hackatom
spec:
  selector:
    app: starway-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
